# Core.2D

./: .gitignore  CMakeLists.txt  README.md  configure.bat  configure.sh
docs/: audio.md  basics.md  file.md  input.md  math.md  physics.md  text.md  timers.md
src/: c2d_audio.c  c2d_camera.c  c2d_file.c  c2d_input.c  c2d_math.c  c2d_text.c  c2d_texture.c  c2d_time.c  c2d_window.c  c2dcamera.c  c2dinput.c  c2dwindow.c  core2d.h  main.cpp
